Weekly Covid Update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -244,8 +244,8 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>January 1, 2022</p>
-                            <p>作者：Atlas Guo</p>
+                            <p>February 7, 2022</p>
+                            <p>作者：阿特拉斯</p>
                         </div>
                     </div>
                 </div>
@@ -281,107 +281,24 @@
                                 </p>
                                 <br><br><br><br>
 
-                                <h3>麦迪逊地区新冠疫情电子地图（累计病例）<br>Madison Area Covid Interactive Map (Cumulative Cases)
-                                </h3>
-                                <hr>
-
-                                <style>
-                                    .embed-container {
-                                        position: relative;
-                                        padding-bottom: 80%;
-                                        height: 0;
-                                        max-width: 100%;
-                                    }
-
-                                    .embed-container iframe,
-                                    .embed-container object,
-                                    .embed-container iframe {
-                                        position: absolute;
-                                        top: 0;
-                                        left: 0;
-                                        width: 100%;
-                                        height: 100%;
-                                    }
-
-                                    small {
-                                        position: absolute;
-                                        z-index: 40;
-                                        bottom: 0;
-                                        margin-bottom: -15px;
-                                    }
-                                </style>
-                                <div class="embed-container"><iframe width="500" height="400" frameborder="0"
-                                        scrolling="no" marginheight="0" marginwidth="0" title="麦迪逊地区新冠疫情地图"
-                                        src="//atlaskwok.maps.arcgis.com/apps/Embed/index.html?webmap=930cc895b955473a944772e95b787d03&extent=-89.5129,43.0223,-89.2825,43.1124&home=true&zoom=true&previewImage=false&scale=true&legend=true&basemap_gallery=true&disable_scroll=false&theme=light"></iframe>
-                                </div>
-
-                                <br> <br> <br> <br>
-
-                                <h3>麦迪逊地区新冠疫情电子地图（一周病例）<br>Madison Area Covid Interactive Map (Weekly Cases)</h3>
-                                <hr>
-                                <style>
-                                    .embed-container {
-                                        position: relative;
-                                        padding-bottom: 80%;
-                                        height: 0;
-                                        max-width: 100%;
-                                    }
-
-                                    .embed-container iframe,
-                                    .embed-container object,
-                                    .embed-container iframe {
-                                        position: absolute;
-                                        top: 0;
-                                        left: 0;
-                                        width: 100%;
-                                        height: 100%;
-                                    }
-
-                                    small {
-                                        position: absolute;
-                                        z-index: 40;
-                                        bottom: 0;
-                                        margin-bottom: -15px;
-                                    }
-                                </style>
-                                <div class="embed-container"><iframe width="500" height="400" frameborder="0"
-                                        scrolling="no" marginheight="0" marginwidth="0" title="麦迪逊地区新冠疫情地图（一周）"
-                                        src="//atlaskwok.maps.arcgis.com/apps/Embed/index.html?webmap=140e0b050fad49608753b5064f7e0009&extent=-89.5413,43.0207,-89.2435,43.1108&home=true&zoom=true&previewImage=false&scale=true&legend=true&basemap_gallery=true&disable_scroll=false&theme=light"></iframe>
-                                </div>
-
-                                <br><br><br><br>
-
-                                <h3>新冠疫情信息平台<br>Covid Pandemic Information Dashboard </h3>
-                                <hr>
-                                <p>麦迪逊地区（桌面版）：<a href="https://arcg.is/0SG91T">https://arcg.is/0SG91T</a></p>
-                                <p>麦迪逊地区（手机版）：<a href="https://arcg.is/1efK4H">https://arcg.is/1efK4H</a></p>
-                                <p>Madison Area (Desktop)：<a href="https://arcg.is/0KWXqe">https://arcg.is/0KWXqe</a>
-                                </p>
-                                <p>Madison Area (Mobile)：<a href="https://arcg.is/1CjLyj0">https://arcg.is/1CjLyj0</a>
-                                </p>
-                                <p>威斯康星 Wisconsin (Desktop)：<a href="https://arcg.is/15rmOW">https://arcg.is/15rmOW</a>
-                                </p>
-                                <br><br><br><br>
+                                
 
                                 <h3>一周疫情简报<br>Weekly Pandemic Summary</h3>
                                 <hr>
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2021年12月20日~26日一周疫情简报：
+                                <p>2022年1月31日~2月6日一周疫情简报：
 
-                                <p>— 威斯康星州疫情增长速度与上周大致持平，病例总数超过96.7万例，平均每日增长3402例（上周为3335例）；累计死亡9928人，最近一周新增死亡245人（上周为302人）。一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（新增5555）、戴恩郡Madison（新增2013）、沃基肖郡Waukesha（新增1445）、布朗郡Green
-                                    Bay（新增1157）、Racine郡（新增872）、Winnebago郡（新增701），其他郡一周新增人数在700人以下。
+                                <p>— 威斯康星州疫情增长速度较上周大幅降低（下降46%），病例总数超过135万例，平均每日增长3184例（上周为5887例）；累计死亡11387人，最近一周新增死亡253人（上周为322人）。一周新增病例数目最多的地区包括戴恩郡Madison（+3054）、密尔沃基郡Milwaukee（+2530）、沃基肖郡Waukesha（+1328）、布朗郡Green Bay（+1015）、Winnebago郡（+935）、Rock郡（+851）、La Crosse郡（+748）、Marathon郡（+721）、Outagamie郡（+568）、Eau Claire郡（+566）、Racine郡（+538）、Kenosha郡（+533），其他郡一周新增人数在500人以下。
 
-                                <p>— 戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有升高，目前病例总数为69413例，周内新增3289例，平均每日增长470例（上周为431例），一周平均检测阳性率为8.0%（高于上周的6.6%）。戴恩郡新冠住院病人数目由130人降至110人；重症病房新冠病人数目在37人左右波动；累计死亡381人，新增8人（上周为2人）。
+                                <p>— 戴恩郡（包括麦迪逊市）疫情增长速度较上周大幅降低（下降40%），目前病例总数为112186例，周内新增2940例，平均每日增长420例（上周为700例），一周平均检测阳性率为11.9%（低于上周的15.4%）。戴恩郡新冠住院病人数目由148人降至127人；重症病房新冠病人数目由33人降至32人；累计死亡432例，新增8例（上周为11例）。
 
-                                <p>— 截止到12月23日，戴恩郡已接种疫苗总数超过82.6万剂。接种至少一剂疫苗者超过44万人，占总人口80%，其中18~24岁人口中接种至少一剂疫苗的比例为71%，25~34岁人口为87%，亚裔为69%；完成接种疫苗者超过41万人，占总人口的75%，其中18~24岁人口中完成接种疫苗的比例为64%，25~34岁人口为81%，亚裔为63%；详情见州卫生部门网页。
+                                <p>— 截止到2月6日，戴恩郡已接种疫苗总数超过84万剂。接种至少一剂疫苗者超过45万人，占总人口82%，其中18~24岁人口中接种至少一剂疫苗的比例为74%，25~34岁人口为89%，亚裔为73%；完成接种疫苗者超过42万人，占总人口的77%，其中18~24岁人口中完成接种疫苗的比例为65%，25~34岁人口为83%，亚裔为68%；详情见州卫生部门网页。
 
-                                <p>— 戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：州议会大厦西侧与南侧、State
-                                    Street南北两侧的大片区域、UW校园南侧区域（橄榄球场以东直至Washington Ave、Regent以北）、MSN机场附近（西侧与南侧）、Lake
-                                    Monona南岸及临近的Beltline以南、戴恩郡东北部Sun Prairie市等，详情请查看所附地图。
+                                <p>— 戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：State St南侧地区（W Johnson St以北、Park St以东）、戴恩郡东南边界（包括Stoughton东北、Hanerville、Albion）、State St北侧地区（Park St以东、Wisconsin Ave与W Johnson St以西）、Waunakee南部、UW校园南侧（Regent St以北、橄榄球场以东、Park St以西），详情请查看所附地图。
 
-                                <p>—上周周一至周四期间，UW-Madison校园共新增阳性251例，包括学生240例，职工11例。一周检测阳性率为学生8.5%（上周为7.8%），职工1.2%（上周为1.0%）。由于圣诞与新年假期，UW-Madison疫情信息暂停更新，预计于下周二1月4日起恢复更新。
+                                <p>— 威斯康星大学麦迪逊分校中，最近一周内共新增阳性394例（上周为267例，上升48%），包括学生363例（上周为210例，上升73%）、职工31例（上周为57例，下降46%）。一周检测阳性率为学生11.9%（上周为6.9%），职工4.3%（上周为6.2%）。截至2月6日，学生疫苗接种率为95.1%，职工疫苗接种率为96.4%。
 
                                 <p>数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台）
 
