--- a/recreation/category.html
+++ b/recreation/category.html
@@ -257,6 +257,35 @@
                 <div class="container">
                     <div class="row justify-content-center section_padding_100">
 
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Recreation</a>
+                                </div>
+                                <h4 class="font-pt">创造历史！“冬奥顶流”谷爱凌斩获个人首金，朱易比赛失误遭遇造谣网暴</h4>
+                                <p class="gazette-post-date">2022年2月8日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/GAL.png" style="max-height: 250px; width: auto;"
+                                        alt="创造历史！“冬奥顶流”谷爱凌斩获个人首金，朱易比赛失误遭遇造谣网暴">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>                    北京时间2月8日，北京冬奥会迎来第四日的赛事，当日在冰壶、单板滑雪、冬季两项、高山滑雪、速度滑冰、雪橇、越野滑雪、自由式滑雪等项目将决出10枚金牌。
+
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="guailing&zhuyi.html" class="font-pt" target="_blank"
+                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
 
                         <div class="col-12 col-md-4">
                             <!-- Gazette Welcome Post -->
