--- a/recreation/category.html
+++ b/recreation/category.html
@@ -264,6 +264,36 @@
                                 <div class="gazette-post-tag">
                                     <a href="#">Recreation</a>
                                 </div>
+                                <h4 class="font-pt">阿克塞尔四周跳”虽败犹荣 羽生结弦：“已经交出了自己的全部” ；中国女子钢架雪车首秀， 旗手赵丹、黎禹汐晋级</h4>
+                                <p class="gazette-post-date">2022年2月10日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/yushengjiexian.jpeg" style="max-height: 250px; width: auto;"
+                                        alt="阿克塞尔四周跳”虽败犹荣 羽生结弦：“已经交出了自己的全部” ；中国女子钢架雪车首秀， 旗手赵丹、黎禹汐晋级">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>据日本《东方新报》报道，在2月10日结束的花样滑冰男子单人长节目比赛中，备受瞩目的日本选手羽生结弦未能在比赛中完成自己试图挑战的“阿克塞尔四周跳”，但它仍被权威机构国际滑冰联合会认定为花滑赛事史上第一个符合“阿克塞尔四周跳”规格的跳跃。羽生结弦尽管最终无缘奖牌，却在一种虽败犹荣的意义上获得了来自全世界的喝彩。
+
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="yushengjiexian.html" class="font-pt" target="_blank"
+                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Recreation</a>
+                                </div>
                                 <h4 class="font-pt">创造历史！“冬奥顶流”谷爱凌斩获个人首金，朱易比赛失误遭遇造谣网暴</h4>
                                 <p class="gazette-post-date">2022年2月8日</p>
                                 <!-- Post Thumbnail -->
