fix category bug

--- a/business/merger.html
+++ b/business/merger.html
@@ -243,7 +243,7 @@
                             <div class="gazette-post-tag">
                                 <a href="#">Business</a>
                             </div>
-                            <h2 class="font-pt">美国11月通胀率同比上升6.8%，为近40年最高水平</h2>
+                            <h2 class="font-pt">央行、银保监会联合发文，鼓励并购出险房企的优质项目</h2>
                             <p>December 20, 2021</p>
                             <p>作者：王旭黎</p>
                         </div>
