--- a/business/category.html
+++ b/business/category.html
@@ -265,7 +265,7 @@
                                 <div class="gazette-post-tag">
                                     <a href="#">Business</a>
                                 </div>
-                                <h4 class="font-pt">美国11月通胀率同比上升6.8%，为近40年最高水平</h4>
+                                <h4 class="font-pt">央行、银保监会联合发文，鼓励并购出险房企的优质项目</h4>
                                 <p class="gazette-post-date">2021年12月20日</p>
                                 <!-- Post Thumbnail -->
                                 <div class="blog-post-thumbnail my-5">
@@ -277,7 +277,7 @@
                                 <!-- Reading More -->
                                 <div class="post-continue-reading-share mt-30">
                                     <div class="post-continue-btn">
-                                        <a href="inflation.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                        <a href="merger.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
                                                 class="fa fa-chevron-right" aria-hidden="true"></i></a>
                                     </div>
                                 </div>
