--- a/commentary/category.html
+++ b/commentary/category.html
@@ -264,6 +264,47 @@
                                 <div class="gazette-post-tag">
                                     <a href="#">Commentary</a>
                                 </div>
+                                <h4 class="font-pt">​丰县八孩事件,我们怎么看？
+                                </h4>
+                                <p class="gazette-post-date">2022年2月22日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/1_0.png"
+                                        style="max-height: 250px; width: auto;" alt="​丰县八孩事件,我们怎么看？
+                                        ">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>丰县八孩事件发酵已经一个多月了，据最新消息，江苏省委省政府成立“丰县生育八孩女子”事件调查组，整个事件已经进入最关键的阶段。
+                                    此前，大量的媒体人不畏威胁，赶赴事发的丰县欢口镇进行调查，当地的居民也陆续提供线索，大量的细节被披露出来...
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="stars-will-shine-above-the-valley-floor.html" class="font-pt"
+                                            target="_blank" title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+
+
+
+
+            <div class="catagory-welcome-post-area">
+                <div class="container">
+                    <div class="row justify-content-center section_padding_100 ">
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Commentary</a>
+                                </div>
                                 <h4 class="font-pt">就算是“土猪”，也可以仰望星空</h4>
                                 <p class="gazette-post-date">2021年6月9日</p>
                                 <!-- Post Thumbnail -->
