weekly covid update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -244,7 +244,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>February 21, 2022</p>
+                            <p>February 28, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -288,17 +288,17 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年2月14日~20日一周疫情简报：
+                                <p>2022年2月21日~27日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周大幅降低（下降41%），病例总数超过137万例，平均每日增长1104例（上周为1855例）；累计死亡11730人，最近一周新增死亡127人（上周为216人）。一周新增病例数目最多的地区包括戴恩郡Madison（+1119）、密尔沃基郡Milwaukee（+889）、沃基肖郡Waukesha（+471）、Rock郡（+289）、Winnebago郡（+260）、布朗郡Green Bay（+245）、Outagamie郡（+241）、La Crosse郡（+205）、Marathon郡（+200），其他郡一周新增人数在200人以下。
+                                    <br><br>—  威斯康星州疫情增长速度较上周大幅降低（下降39%），病例总数超过138万例，平均每日增长671例（上周为1104例）；累计死亡11921人，最近一周新增死亡191人（上周为127人）。一周新增病例数目最多的地区包括戴恩郡Madison（+634）、密尔沃基郡Milwaukee（+573）、沃基肖郡Waukesha（+313）、布朗郡Green Bay（+216）、La Crosse郡（+155）、Rock郡（+149）、Marathon郡（+137）、Winnebago郡（+131）、Racine郡（+123）、Eau Claire郡（+121）、Outagamie郡（+121），其他郡一周新增人数在100人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周大幅降低（下降45%），目前病例总数为115279例，周内新增1102例，平均每日增长157例（上周为284例），一周平均检测阳性率为6.8%（低于上周的9.7%）。戴恩郡新冠住院病人数目由87人降至77人；重症病房新冠病人数目由17人降至14人；累计死亡448例，新增10例（上周为6例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周大幅降低（下降43%），目前病例总数为115912例，周内新增633例，平均每日增长90例（上周为157例），一周平均检测阳性率为4.6%（低于上周的6.8%）。戴恩郡新冠住院病人数目由77人降至64人；重症病房新冠病人数目由14人降至10人；累计死亡453例，新增5例（上周为10例）。
 
-                                    <br><br>—  截止到2月20日，戴恩郡已接种疫苗总数超过87万剂。接种至少一剂疫苗者超过45万人，占总人口82%，其中18~24岁人口中接种至少一剂疫苗的比例为75%，25~34岁人口为89%，亚裔为73%；完成接种疫苗者超过43万人，占总人口的78%，其中18~24岁人口中完成接种疫苗的比例为65%，25~34岁人口为83%，亚裔为68%；详情见州卫生部门网页。
+                                    <br><br>—  截止到2月27日，戴恩郡已接种疫苗总数超过87万剂。接种至少一剂疫苗者超过45万人，占总人口83%；完成接种疫苗者超过43万人，占总人口的78%；完成接种加强针者占69.2%。
 
-                                    <br><br>—  戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Stoughton北部、Beltline高速部分沿线地区（257-258号口北侧）、UW校园南侧（Regent St以北、橄榄球场以东、Park St以西）、State St以南至Regent St与W Washington Ave、戴恩郡北部的Deforest、Waunakee、Lake Monona东南岸部分地区，详情请查看所附地图。
+                                    <br><br>—  戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：威大UW Eagle Heights和University Houses公寓区、Middleton市东北部（包括Lake Mendota湖西岸）、戴恩郡南部边界地区（Oregon以南）、Monona市部分地区（Beltline高速与Stoughton Rd路口西北）、Venora市部分地区（Midtown Rd至US-151一带），详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性99例（上周为285例，下降65%），包括学生97例（上周为267例，下降64%）、职工2例（上周为18例，下降89%）。一周检测阳性率为学生5.0%（上周为9.4%），职工0.4%（上周为2.9%）。截至2月20日，学生疫苗接种率为95.6%，职工疫苗接种率为96.6%。
+                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性51例（上周为99例，下降48%），包括学生46例（上周为97例，下降53%）、职工5例（上周为2例，上升150%）。一周检测阳性率为学生2.8%（上周为5.0%），职工1.2%（上周为0.4%）。截至2月27日，学生疫苗接种率为95.6%，职工疫苗接种率为96.6%。
                                                                         
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
