--- a/commentary/category.html
+++ b/commentary/category.html
@@ -280,7 +280,7 @@
                                 <!-- Reading More -->
                                 <div class="post-continue-reading-share mt-30">
                                     <div class="post-continue-btn">
-                                        <a href="stars-will-shine-above-the-valley-floor.html" class="font-pt"
+                                        <a href="eight_children.html" class="font-pt"
                                             target="_blank" title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
                                                 aria-hidden="true"></i></a>
                                     </div>
