--- a/about.html
+++ b/about.html
@@ -256,6 +256,15 @@
                                             <li class="nav-item">
                                                 <a class="nav-link" href="pandemic/pandemic.html">疫情 Pandemic</a>
                                             </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="campus/category.html">校园 Campus</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="global/category.html">国际 Global</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="history/category.html">历史 History</a>
+                                            </li>
                                         </ul>
                                         <!-- Search Form -->
                                         <div class="header-search-form mr-auto">
@@ -484,6 +493,17 @@
                                 <img src="img/members-img/cjx.jpg" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">陈建旭</h4>
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                        <h5 class="font-pt mb-0">编辑</h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-3">
+                            <div class="single-team-area">
+                                <img src="img/members-img/zyz.jpeg" alt="">
+                                <div class="team-member-data">
+                                    <h4 class="font-pt">周禹臻</h4>
                                     <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
                                         <h5 class="font-pt mb-0">编辑</h5>
                                     </div>
