--- a/commentary/eight_children.html
+++ b/commentary/eight_children.html
@@ -208,6 +208,15 @@
                                       <li class="nav-item">
                                           <a class="nav-link" href="../pandemic/pandemic.html">疫情 Pandemic</a>
                                       </li>
+                                      <li class="nav-item">
+                                        <a class="nav-link" href="../campus/category.html">校园 Campus</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="../global/category.html">国际 Global</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="../history/category.html">历史 History</a>
+                                    </li>
                                   </ul>
                                   <!-- Search Form -->
                                   <div class="header-search-form mr-auto">
