--- a/about.html
+++ b/about.html
@@ -512,6 +512,28 @@
                         </div>
                         <div class="col-12 col-sm-6 col-md-3">
                             <div class="single-team-area">
+                                <img src="img/members-img/zyx.jpeg" alt="">
+                                <div class="team-member-data">
+                                    <h4 class="font-pt">张雨轩</h4>
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                        <h5 class="font-pt mb-0">编辑</h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-3">
+                            <div class="single-team-area">
+                                <img src="img/members-img/yjf.jpeg" alt="">
+                                <div class="team-member-data">
+                                    <h4 class="font-pt">叶鉴锋 Jeff</h4>
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                        <h5 class="font-pt mb-0">编辑</h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-3">
+                            <div class="single-team-area">
                                 <img src="img/members-img/xty.jpg" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">肖天倚</h4>
