--- a/campus/category.html
+++ b/campus/category.html
@@ -9,7 +9,7 @@
         <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
         <!-- Title  -->
-        <title>麦迪讯 | 科技 Tech</title>
+        <title>麦迪讯 | 校园新闻 Campus</title>
 
         <!-- Favicon  -->
         <link rel="icon" href="../img/core-img/logo.jpg">
@@ -254,105 +254,10 @@
                                 <div class="gazette-post-tag">
                                     <a href="">MADNEWS</a>
                                 </div>
-                                <h2 class="font-pt">麦迪讯 | 科技类文章<br></br></h2>
+                                <h2 class="font-pt">麦迪讯 | 校园新闻<br></br></h2>
 
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="catagory-welcome-post-area">
-                <div class="container">
-                    <div class="row justify-content-center section_padding_100">
-
-                        <div class="col-12 col-md-4">
-                            <!-- Gazette Welcome Post -->
-                            <div class="gazette-welcome-post">
-                                <!-- Post Tag -->
-                                <div class="gazette-post-tag">
-                                    <a href="#">Tech</a>
-                                </div>
-                                <h4 class="font-pt">奥密克戎毒株科普以及美国近期新冠疫情分析</h4>
-                                <p class="gazette-post-date">2021年1月1日</p>
-                                <!-- Post Thumbnail -->
-                                <div class="blog-post-thumbnail my-5">
-                                    <img src="img/omicron9.jpg" style="max-height: 250px; width: auto;"
-                                        alt="">
-                                </div>
-                                <!-- Post Excerpt -->
-                                <p>最近，奥密克戎毒株在美国的流行打破了许多人对于疫情结束的幻想，奥密克戎以前所未有的速度在美利坚的土地上肆意驰骋，所到之处感染率飙升。那么，奥密克戎毒株究竟和以往的新冠毒株有着怎样的区别？奥密克戎目前流行的情况如何？我们留学生应该如何防御这种病毒呢？本篇文章就将对这几个问题进行深入分析，给尚在美国的海外学子们敲响警钟。 奥密克戎疫情可能是迄今为止传播最为凶险的一波疫情，这样的说法绝非危言耸听。
-                                </p>
-                                <!-- Reading More -->
-                                <div class="post-continue-reading-share mt-30">
-                                    <div class="post-continue-btn">
-                                        <a href="omicron.html" class="font-pt" target="_blank"
-                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
-                                                aria-hidden="true"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-12 col-md-4">
-                            <!-- Gazette Welcome Post -->
-                            <div class="gazette-welcome-post">
-                                <!-- Post Tag -->
-                                <div class="gazette-post-tag">
-                                    <a href="#">Tech</a>
-                                </div>
-                                <h4 class="font-pt">中医药是否对新冠肺炎有效</h4>
-                                <p class="gazette-post-date">2021年1月1日</p>
-                                <!-- Post Thumbnail -->
-                                <div class="blog-post-thumbnail my-5">
-                                    <img src="img/image12.jpg" style="max-height: 250px; width: auto;"
-                                        alt="中医药是否对新冠肺炎有效">
-                                </div>
-                                <!-- Post Excerpt -->
-                                <p>最近新冠病毒在北美和欧洲横行，大杀四方，一时间全世界都为之人心惶惶。随着确诊人数和死亡人数的不断上升，疫情的结束看起来遥遥无期，黑云笼罩在北美和欧洲大陆的上空，久久未散。而在中国，这个病毒最初被检测到并流行的地方，却早已是拨云见日，病毒逐渐销声匿迹。
-                                </p>
-                                <!-- Reading More -->
-                                <div class="post-continue-reading-share mt-30">
-                                    <div class="post-continue-btn">
-                                        <a href="trad-chinese-med_covid.html" class="font-pt" target="_blank"
-                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
-                                                aria-hidden="true"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-12 col-md-4">
-                            <!-- Gazette Welcome Post -->
-                            <div class="gazette-welcome-post">
-                                <!-- Post Tag -->
-                                <div class="gazette-post-tag">
-                                    <a href="#">Tech</a>
-                                </div>
-                                <h4 class="font-pt">新冠疫苗之比较</h4>
-                                <p class="gazette-post-date">2021年1月10日</p>
-                                <!-- Post Thumbnail -->
-                                <div class="blog-post-thumbnail my-5">
-                                    <img src="img/image9.png" style="max-height: 250px; width: auto;" alt="新冠疫苗之比较">
-                                </div>
-                                <!-- Post Excerpt -->
-                                <p>mRNA疫苗和常规灭活疫苗有什么区别？这三种疫苗的安全性如何？会有什么副作用？有效率又如何？有怎么样的接种方式？本文将会针对这些问题全面分析和比较这三种疫苗目前的公开数据，希望能给读者们一点启迪，让读者们明白各种疫苗的优劣，从而做出稳妥的选择。
-                                </p>
-                                <!-- Reading More -->
-                                <div class="post-continue-reading-share mt-30">
-                                    <div class="post-continue-btn">
-                                        <a href="covid-vaccine-comparison.html" class="font-pt" target="_blank"
-                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
-                                                aria-hidden="true"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-12 col-md-4">
-                            <br></br>
-                        </div>
-
                     </div>
                 </div>
             </div>
