update about page

--- a/about.html
+++ b/about.html
@@ -602,6 +602,28 @@
                         </div>
                         <div class="col-12 col-sm-6 col-md-3">
                             <div class="single-team-area">
+                                <img src="img/members-img/lyr.jpg" alt="">
+                                <div class="team-member-data">
+                                    <h4 class="font-pt">刘煜然</h4>
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                        <h5 class="font-pt mb-0">编辑</h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-3">
+                            <div class="single-team-area">
+                                <img src="img/members-img/lyr.jpg" alt="">
+                                <div class="team-member-data">
+                                    <h4 class="font-pt">王卓尔</h4>
+                                    <div class="team-member-designation-social-info d-flex align-items-cente justify-content-between">
+                                        <h5 class="font-pt mb-0">美编</h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-3">
+                            <div class="single-team-area">
                                 <img src="img/members-img/lrj.jpg" alt="">
                                 <div class="team-member-data">
                                     <h4 class="font-pt">李若嘉</h4>
