--- a/history/category.html
+++ b/history/category.html
@@ -245,7 +245,7 @@
         <section class="single-post-area">
             <!-- Single Post Title -->
             <div class="single-post-title bg-img background-overlay"
-                style="background-image: url(../img/bg-img/tech_bg.png);">
+                style="background-image: url(../img/bg-img/history_bg.png);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-end">
                         <div class="col-12">
@@ -261,6 +261,41 @@
                     </div>
                 </div>
             </div>
+
+            <div class="catagory-welcome-post-area">
+                <div class="container">
+                    <div class="row justify-content-center section_padding_100">
+
+                      <div class="col-12 col-md-4">
+                          <!-- Gazette Welcome Post -->
+                          <div class="gazette-welcome-post">
+                              <!-- Post Tag -->
+                              <div class="gazette-post-tag">
+                                  <a href="#">History</a>
+                              </div>
+                              <h4 class="font-pt">纺织女工vs垄断寡头：劳伦斯大罢工（1）</h4>
+                              <p class="gazette-post-date">2022年2月25日</p>
+                              <!-- Post Thumbnail -->
+                              <div class="blog-post-thumbnail my-5">
+                                  <img src="img/17.jpg" style="max-height: 250px; width: auto;"
+                                      alt="纺织女工vs垄断寡头：劳伦斯大罢工（1）">
+                              </div>
+                              <!-- Post Excerpt -->
+                              <p>二十世纪初，美国在文化和军事尚且落后的情况下，经济已然超越大英帝国，成为世界第一。劳伦斯则是这个新兴世界第一强国的超级工业中心，在纺织业的地位就像21世纪唐山在钢铁行业的地位，凭一己之力就出产了全美四分之一的羊毛制品，加上临近地区更是超过半数，城里的居民骄傲的宣称，“我们编织世界的羊毛”。</p>
+                              <!-- Reading More -->
+                              <div class="post-continue-reading-share mt-30">
+                                  <div class="post-continue-btn">
+                                      <a href="1912_Lawrence_01.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                              class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+
+                    </div>
+                </div>
+            </div>
+
         </section>
 
         <!-- Footer Area Start -->
