--- a/history/1912_Lawrence_01.html
+++ b/history/1912_Lawrence_01.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>麦迪讯 | 纺织女工vs垄断寡头：劳伦斯大罢工（1）</title>
+    <title>麦迪讯 | 劳伦斯大罢工（1）</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="../img/core-img/logo.jpg">
