update commentary & society

--- a/commentary/category.html
+++ b/commentary/category.html
@@ -266,6 +266,33 @@
                 <div class="container">
                     <div class="row justify-content-center section_padding_100 ">
 
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Commentary</a>
+                                </div>
+                                <h4 class="font-pt">你也被异化了？</h4>
+                                <p class="gazette-post-date">2022年3月14日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/Taking_pictures.png" style="max-height: 250px; width: auto;"
+                                        alt="你也被异化了？">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>不知道从什么时候开始，“现代病”正在席卷我们的全身，压力山大。可有趣的是，我们也恰好处于一个放松方式极为丰富的时代，只一个小小的手机就能给我们在任何地点给我们带来无穷无尽的娱乐。然而，我们并没有因此而放松下来，反而感觉心理负担越来越重，好像干什么都没劲，这是为什么呢？请看本社评论员文章。</p>
+                                    <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="Alienate.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读
+                                            <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="col-12 col-md-4">
                             <!-- Gazette Welcome Post -->
                             <div class="gazette-welcome-post">
