--- a/society/category.html
+++ b/society/category.html
@@ -273,6 +273,38 @@
                                 <div class="gazette-post-tag">
                                     <a href="#">Society</a>
                                 </div>
+                                <h4 class="font-pt">从一起2018年的谋杀案来看美国刑事审讯（trial）</h4>
+                                <p class="gazette-post-date">2022年3月14日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/court.png" style="max-height: 250px; width: auto;"
+                                        alt="从一起2018年的谋杀案来看美国刑事审讯（trial）">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>2021年，1月上旬，Dane County 法院开始了针对2018年万圣节期间state street & Frances street停车场的一起命案的审讯。2018年10月29日凌晨2时许，一名名叫Kenyairra Gadson的非裔女性被指控枪杀一名非裔男子-Stephen Villegas ，受害人被送往医院后不治身亡。改名开枪女子于29日晚些被麦迪逊警方传唤到警局，在警方一步一步的审问下，嫌疑人开始交代了开枪的过程，自称开枪只为保护自己，正当防卫。案发后，Dane County District Attorney 先以一级蓄意谋杀罪刑事起诉被告-Kenyairra Gadson，后为了保证检控的成功，把指控的罪名调整为稍轻的一级过失谋杀。由于被告在未成年阶段，有一项重罪的前科，检方于是起诉第二条罪名-非法持有武器罪。
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="Trial.html" class="font-pt" target="_blank"
+                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+<!------------------------------------------------------->
+
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Society</a>
+                                </div>
                                 <h4 class="font-pt">东京奥运，“办还是不办？” 麦迪讯带你了解奥运会背后的政治考量</h4>
                                 <p class="gazette-post-date">2021年2月23日</p>
                                 <!-- Post Thumbnail -->
