--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -253,7 +253,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>March 21, 2022</p>
+                            <p>March 28, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -297,17 +297,17 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年3月14日~20日一周疫情简报：
+                                <p>2022年3月21日~27日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周有所升高（上升11%），病例总数超过138万例，平均每日增长358例（上周为323例）；累计死亡12534人，最近一周新增死亡192人（上周为229人）。一周新增病例数目最多的地区包括戴恩郡Madison（+468）、密尔沃基郡Milwaukee（+338）、沃基肖郡Waukesha（+174）、Rock郡（+121）、布朗郡Green Bay、Winnebago郡（+69）、Wood郡（+67）、La Crosse郡（+63）、Green郡（+62）、Kenosha郡（+61）、Outagamie郡（+54）、Eau Claire郡（+52）、Racine郡（+51），其他郡一周新增人数在50人以下。
+                                    <br><br>—  威斯康星州疫情增长速度较上周有所降低（下降16%），病例总数超过139万例，平均每日增长301例（上周为358例）；累计死亡12775人，最近一周新增死亡241人（上周为192人）。一周新增病例数目最多的地区包括戴恩郡Madison（+536）、密尔沃基郡Milwaukee（+305）、Rock郡（+122）、Waukesha郡（+111）、La Crosse郡（+77）、Winnebago郡（+58）、布朗郡Green Bay（+57）、Outagamie郡（+51），其他郡一周新增人数在50人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所升高（上升17%），目前病例总数为117240例，周内新增467例，平均每日增长67例（上周为57例），一周平均检测阳性率为3.0%（低于上周的3.1%）。戴恩郡新冠住院病人数目由30人降至26人；重症病房新冠病人数目由4人降至3人；累计死亡467例，新增8例（上周为2例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所升高（上升12%），目前病例总数为117762例，周内新增522例，平均每日增长75例（上周为67例），一周平均检测阳性率为3.6%（高于上周的3.0%）。戴恩郡新冠住院病人数目由26人降至24人；重症病房新冠病人数目在3人左右波动；累计死亡469例，新增2例（上周为8例）。
 
-                                    <br><br>—  截止到3月20日，戴恩郡接种至少一剂疫苗者超过45万人，占总人口83%；完成接种疫苗者超过43万人，占总人口的78%；完成接种加强针者占62.7%。
+                                    <br><br>—  截止到3月27日，戴恩郡接种至少一剂疫苗者超过45.7万人，占总人口82.9%；完成接种疫苗者超过43.3万人，占总人口的78.5%；完成接种加强针者占62.8%。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：麦迪逊市西北方向的Cross Plains、Lake Monona南岸与东岸、Verona市北部地区、Sun Prairie市东部地区、I-39高速与Beltline高速交叉口的西部地区（Monona市以东）等，详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Beltline高速257号出口东北（Odana Hills Park）、Lake Monona西岸与东岸部分区域、Lake Mendota东岸部分区域、戴恩郡西南部的Mt Horeb、Lake Mendota西北岸部分区域（Middleton市东北部）等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性20例（上周为35例，下降43%），包括学生14例（上周为28例，下降50%）、职工6例（上周为7例，下降14%）。一周检测阳性率为学生5.2%（上周为1.4%），职工1.5%（上周为1.6%）。截至目前，学生疫苗接种率为95.7%，职工疫苗接种率为96.4%。
+                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性43例（上周为20例，上升115%），包括学生33例（上周为14例，上升136%）、职工10例（上周为6例，上升67%）。一周检测阳性率为学生2.2%（上周为5.2%），职工2.3%（上周为1.5%）。截至目前，学生疫苗接种率为95.7%，职工疫苗接种率为96.5%。
                                                                         
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
